# guardin-mind

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/Template/: README.md  minder.py  minder_config.toml
docs/ru/: README.md
guardin_mind/: __init__.py  cli.py  configs.py  mind.py
guardin_mind/manager/: __init__.py  manager.py
guardin_mind/mind_utils/: exceptions.py  logger.py
guardin_mind/minders/HelloWorld/: README.md  minder.py  minder_config.toml
guardin_mind/minders/WebChatGPT/: minder.py
guardin_mind/package_manager/: __init__.py  package_manager.py
tests/: test_mind.py
tests/no_pytest_tests/: test_limit_concurrency.py  test_one_request.py
