[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardin-mind"
version = "0.1.2"
# The version needs to be duplicated in several places:
# 1. pyproject.toml/[project]/version
# 3. guardin_mind/__init__.py/__version__
description = "The framework for the efficient creation of programmatic APIs and microservices"
readme = { file = "README.md", content-type = "text/markdown" } # README file
authors = [
    { name = "Walter Solment", email = "esolment@gmail.com" }
]
license = "MIT"
urls = { repository = "https://github.com/guardin-mind/guardin-mind" } # Repository
requires-python = ">=3.11.4"
dependencies = [
    "colorama",
    "packaging",
    "requests"
]

# CLI
[project.scripts]
mind = "guardin_mind.cli:main"

# Dependencies for develop
[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["guardin_mind"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"